--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "set NODE_ENV=production && node dist/index.js",
     "start:unix": "NODE_ENV=production node dist/index.js",
+    "railway:start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
