feat: Complete Swasthik Health App with full deployment configuration
- Add comprehensive AI-powered healthcare assistant with multilingual support
- Implement symptom analysis, medication database, and health center finder
- Add voice input, image analysis, and health reminders features
- Configure deployment for Vercel (frontend) and Railway/Render (backend)
- Add environment variable templates and deployment documentation
- Include responsive UI with Radix components and TailwindCSS
- Set up Firebase authentication and Google Gemini AI integration
- Add comprehensive error handling and fallback mechanisms
- Ready for production deployment with all necessary configurations

--- a/env.example
+++ b/env.example
@@ -1,25 +1,25 @@
 ﻿# API Keys for Swasthik Health App
 
 # LocationIQ API - for finding health centers in real-time (replaces Google Places)
-VITE_LOCATIONIQ_API_KEY=your_locationiq_api_key_here
-LOCATIONIQ_API_KEY=your_locationiq_api_key_here
+VITE_LOCATIONIQ_API_KEY=pk.5aa5cd12575de983c0966824943b0017
+LOCATIONIQ_API_KEY=pk.5aa5cd12575de983c0966824943b0017
 
 # NewsData.io API - for health-related real-time news from India
-VITE_NEWSDATA_API_KEY=your_newsdata_api_key_here
-NEWSDATA_API_KEY=your_newsdata_api_key_here
+VITE_NEWSDATA_API_KEY=pub_af66e99360ee40c1989562d1c3d5ee3c
+NEWSDATA_API_KEY=pub_af66e99360ee40c1989562d1c3d5ee3c
 
 # Speechmatics API - for voice-to-text in chatbot AI
-VITE_SPEECHMATICS_API_KEY=your_speechmatics_api_key_here
-SPEECHMATICS_API_KEY=your_speechmatics_api_key_here
+VITE_SPEECHMATICS_API_KEY=pXJi3NUdD7mMG8LJ1LPLZnMTPJ0jYmgR
+SPEECHMATICS_API_KEY=pXJi3NUdD7mMG8LJ1LPLZnMTPJ0jYmgR
 
 # Google Gemini API - for AI chat functionality
-GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_API_KEY=AIzaSyCxgDRc8ntmm_eOjr8u8nUm6AWt9zs2qww
 
 # Firebase Configuration (for authentication and database)
-VITE_FIREBASE_API_KEY=your_firebase_api_key_here
-VITE_FIREBASE_PROJECT_ID=your_firebase_project_id_here
-VITE_FIREBASE_AUTH_DOMAIN=your_firebase_auth_domain_here
-VITE_FIREBASE_STORAGE_BUCKET=your_firebase_storage_bucket_here
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_firebase_messaging_sender_id_here
-VITE_FIREBASE_APP_ID=your_firebase_app_id_here
-VITE_FIREBASE_MEASUREMENT_ID=your_firebase_measurement_id_here
+VITE_FIREBASE_API_KEY=AIzaSyA6PYRdO7TgjpZFf9NOCg2wVLcAW8fPOX8
+VITE_FIREBASE_PROJECT_ID=swasthik-a03a7
+VITE_FIREBASE_AUTH_DOMAIN=swasthik-a03a7.firebaseapp.com
+VITE_FIREBASE_STORAGE_BUCKET=swasthik-a03a7.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=873456631118
+VITE_FIREBASE_APP_ID=1:873456631118:web:9907bb9bd128f6285c721f
+VITE_FIREBASE_MEASUREMENT_ID=G-0ZRJPLEFX0
