chore: Update project configuration and documentation
- Remove .replit file (no longer needed for local development)
- Update README.md with latest changes
- Update env.example with current configuration

--- a/env.example
+++ b/env.example
@@ -15,7 +15,11 @@ SPEECHMATICS_API_KEY=pXJi3NUdD7mMG8LJ1LPLZnMTPJ0jYmgR
 # Google Gemini API - for AI chat functionality
 GEMINI_API_KEY=AIzaSyCxgDRc8ntmm_eOjr8u8nUm6AWt9zs2qww
 
-# Firebase Configuration (for authentication and database)
+# Clerk Authentication (for user management and authentication)
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_cGxlYXNpbmctdHJvdXQtNjcuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_LzWNjLvE2YKRZ0vk8KxS6VSCITYgZsghnV6julhknJ
+
+# Firebase Configuration (for authentication and database) - DEPRECATED
 VITE_FIREBASE_API_KEY=AIzaSyA6PYRdO7TgjpZFf9NOCg2wVLcAW8fPOX8
 VITE_FIREBASE_PROJECT_ID=swasthik-a03a7
 VITE_FIREBASE_AUTH_DOMAIN=swasthik-a03a7.firebaseapp.com
